--- a/docs/templates/document_edit.html
+++ b/docs/templates/document_edit.html
@@ -18,6 +18,7 @@
       {% if doc_type == 'agenda' %}
         <div class="panel panel-default" id="tasks">
           <div class="panel-heading">
+            <i class="fa fa-paperclip fa-fw fa-lg"></i>&nbsp;
             Attachment 1. &nbsp;&nbsp; Tasks overdue
           </div>
   	      <table class="table cursor-default">
@@ -46,6 +47,7 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
+            <i class="fa fa-paperclip fa-fw fa-lg"></i>&nbsp;
             Attachment 2. &nbsp;&nbsp; Tasks outstanding
           </div>
 	      <table class="table cursor-default">
@@ -74,6 +76,7 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
+            <i class="fa fa-paperclip fa-fw fa-lg"></i>&nbsp;
             Attachment 3. &nbsp;&nbsp; Tasks completed since last meeting
           </div>
 	      <table class="table cursor-default">
