--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -75,7 +75,7 @@ body {
 .nav {
   text-shadow: 0 0 0;
   background-color: #333333;
-  border: 50px;
+  border: 0px;
   
 }
 
@@ -300,7 +300,7 @@ body {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #bbbbbb;
+  color: #ffb8d4;
   background-color: #ff0066;
   border-color: #ff0066;
 }
@@ -572,6 +572,7 @@ tbody tr:hover {
   margin-bottom: 5px;
 }
 
+
 /* SPACING
 -------------------------------------------------- */
 
@@ -589,10 +590,6 @@ tbody tr:hover {
     padding-left: 20px;
     padding-bottom: 500px
   }
-}
-
-.bottom-spacer {
-  height: 500px;
 }
 
 
