--- a/accounts/templates/account.html
+++ b/accounts/templates/account.html
@@ -4,27 +4,41 @@
 
 {% block content %}
 
-<div class="page-header">
-  <h1>{{ page_heading }}</h1>
-</div>
-
-<div class="well">
-  <div class="span6"> 
-    <form action="" method="POST">
+  <h1>Your account</h1>
+  <div class="col-xs-6 text-left">
+    <form class="setup-form" role="form" method="POST">
       {% csrf_token %}
-      <p><strong>Group name:</strong></p>
-      <p>{{ account_form.email|setclass:"form-control" }}</p>
-      <p>{{ account_form.username|setclass:"form-control" }}</p>
-      <br>
+
+      <div class="form-group">      
+        {{ user_form.username.label_tag }}<br/>      
+        {{user_form.username|setclass:"form-control" }}
+        {{ user_form.username.errors }}
+      </div>
+      <div class="form-group">      
+        {{ user_form.first_name.label_tag }}      
+        {{user_form.first_name|setclass:"form-control" }}
+        {{ user_form.first_name.errors }}
+      </div>
+      <div class="form-group">      
+        {{ user_form.last_name.label_tag }}      
+        {{user_form.last_name|setclass:"form-control" }}
+        {{ user_form.last_name.errors }}
+      </div>
+      <div class="form-group">      
+        {{ group_form.name.label_tag }}      
+        {{group_form.name|setclass:"form-control" }}
+        {{ group_form.name.errors }}
+      </div>
+      <div class="form-group">      
+        {{ group_form.description.label_tag }}      
+        {{group_form.description|setclass:"form-control" }}
+        {{ group_form.description.errors }}
+      </div>
+             
       <button type="submit" class="btn btn-primary">
-        Save account details
+        Start using eConvenor
       </button>
-      <a href={% url 'dashboard' %}>
-        <button type="button" class="btn btn-default">
-          Cancel
-        </button>
-      </a>
     </form>
   </div>
-</div>
-{% endblock %}
+       
+{% endblock content %}
