--- a/registration/templates/initialise.html
+++ b/registration/templates/initialise.html
@@ -1,12 +1,18 @@
-{% extends "setup_base.html" %}
+{% extends "registration_base.html" %}
 {% load setclass %}
 {% load staticfiles %}
 
+{% block heading %}
+
+  Step 2 of 2
+
+{% endblock heading %}
+
 {% block content %}
 
-  <h1>Set up your account</h1>
-  <div class="col-xs-4 col-xs-offset-4 text-left">
-    <form class="setup-form" role="form" method="POST">
+
+
+    <form role="form" method="POST">
       {% csrf_token %}
 
       <div class="form-group">      
@@ -34,10 +40,18 @@
         {{group_form.description|setclass:"form-control" }}
         {{ group_form.description.errors }}
       </div>
-             
-      <button type="submit" class="btn btn-primary btn-block">
+
+      <div class="pull-right">
+        <a href="{% url 'register' %}" class="btn btn-default">
+          <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
+          Back
+        </a>
+        <button type="submit" class="btn btn-primary">
+          <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
         Start using eConvenor
-      </button>
+        </button>
+      </div>
+
     </form>
   </div>
        
