--- a/registration/templates/qualify_step5.html
+++ b/registration/templates/qualify_step5.html
@@ -20,11 +20,11 @@
       <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
       Back
     </a>
-    <a href="{% url 'qualify' 'step6' %}" class="btn btn-primary">
+    <a href="{% url 'register' %}" class="btn btn-primary">
       <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
       Yes
     </a>
-    <a href="{% url 'qualify' 'step6' %}" class="btn btn-primary">
+    <a href="{% url 'register' %}" class="btn btn-primary">
       <i class="fa fa-times-circle fa-lg fa-fw"></i>&nbsp;
       No
     </a>
