--- a/registration/templates/register.html
+++ b/registration/templates/register.html
@@ -2,11 +2,15 @@
 {% load setclass %}
 {% load staticfiles %}
 
+{% block heading %}
+
+  Step 1 of 2
+
+{% endblock heading %}
+
 {% block content %}
 
-  <h1>Create your account</h1>
-  <div class="col-xs-4 col-xs-offset-4 text-left">
-    <form class="setup-form" role="form" method="POST">
+    <form role="form" method="POST">
       {% csrf_token %}
 
         {{form.username|setclass:"form-control" }}
@@ -26,11 +30,16 @@
         {{ form.password1.errors }}
         {{ form.password2.errors }}
       </div>
-                  
-      <button type="submit" class="btn btn-primary btn-block">Create my account</button>
-    </form>
-  <p>Return to the <a href="{% url 'index' %}">eConvenor main page</a></p>
-  </div>
-
-       
+      <div class="pull-right">
+        <a href="{% url 'qualify' 'step5' %}" class="btn btn-default">
+          <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
+          Back
+        </a>
+        <button type="submit" class="btn btn-primary">
+          <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
+          Create my account
+        </button>
+      </div>
+    </form>       
+  
 {% endblock content %}
