Set up framework for quick start guide

--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -78,8 +78,11 @@
                 <i class="fa fa-info-circle fa-fw fa-lg"></i>&nbsp;
                 Help <b class="caret"></b></a>
               <ul class="dropdown-menu">
+                <li><a href={% url 'quick-start-guide' %}>
+                  <i class="fa fa-file-text-o fa-fw"></i>&nbsp;
+                  Quick-start guide</a></li>
                 <li><a href={% url 'user-guide' %}>
-                  <i class="fa fa-file-text-o fa-fw"></i>&nbsp;                  
+                  <i class="fa fa-file-text-o fa-fw"></i>&nbsp;
                   User guide</a></li>
                 <li class="divider"></li>
                 <li><a href={% url 'faqs' %}>
