--- a/registration/templates/welcome.html
+++ b/registration/templates/welcome.html
@@ -45,7 +45,7 @@
 
 <div class="col-sm-6 col-sm-offset-3">
   <div class="panel panel-default panel-dashboard">
-    <a href={% url 'task-list' %}>
+    <a href={% url 'quick-start-guide' %}>
       <div class="panel-heading">
 	    <i class="fa fa-align-justify fa-fw"></i>&nbsp;
 	    Quick-start guide
