--- a/registration/templates/qualify_step4.html
+++ b/registration/templates/qualify_step4.html
@@ -4,14 +4,14 @@
 
 {% block heading %}
 
-  From each according to their means&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+  Contributing to eConvenor&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
   Step 4 of 10
 
 {% endblock heading %}
 
 {% block content %}
 
-  <p class="lead">eConvenor is free for most users, and that's the way we plan to keep it. However, we think some users should contribute when they can.</p>
+  <p class="lead">eConvenor is free for most groups because it's built by activists, for activists. However, groups which can afford to contribute are expected to.</p>
 
   <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
 Most groups</p>
@@ -26,9 +26,9 @@ Groups which can afford to contribute</p>
   <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
 Political parties and trade unions</p>
 
-  <p>Political parties and trade unions in high income countries who are progressive and committed to social justice can use eConvenor for a fee.</p>
+  <p>Political parties and trade unions in high income countries (who are progressive and committed to social justice) can use eConvenor for a fee.</p>
 
-  <p>We rely on your honesty. Donations help eConvenor improve.</p>
+  <p>We rely on your honesty. Donations and fees help eConvenor improve.</p>
 
   <div class="pull-right">
     <a href="{% url 'qualify' 'step3' %}" class="btn btn-default">
