--- a/registration/templates/qualify_step2.html
+++ b/registration/templates/qualify_step2.html
@@ -4,47 +4,26 @@
 
 {% block heading %}
 
-  Who eConvenor is for&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+  Eligibility requirements&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
   Step 2 of 10
 
 {% endblock heading %}
 
 {% block content %}
 
-  <p class="lead">eConvenor is for grassroots campaigns, non-government organisations (NGOs), progressive service providers and activist groups.</p>
-  
-  <p>To use eConvenor your group must:</p>
+  <p class="lead">Does your group meet both of these criteria?</p>
+
   <ul>
     <li>
-      <i class="fa fa-check-circle fa-lg fa-fw red"></i>&nbsp;
-      have a socially-just, progressive focus and</li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      The group has a progressive focus</li>
     <li>
-      <i class="fa fa-check-circle fa-lg fa-fw red"></i>&nbsp;
-      be not-for-profit.</li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      The group is opposed to oppression</li>
   </ul>
 
-  <p>You must not use eConvenor if your group:</p>
-  <ul>
-    <li>
-      <i class="fa fa-times-circle fa-lg fa-fw red"></i>&nbsp;
-      is conservative or oppressive</li>
-    <li>
-      <i class="fa fa-times-circle fa-lg fa-fw red"></i>&nbsp;
-      operates for profit</li>
-    <li>
-      <i class="fa fa-times-circle fa-lg fa-fw red"></i>&nbsp;
-      is a government agency</li>
-    <li>
-      <i class="fa fa-times-circle fa-lg fa-fw red"></i>&nbsp;
-      is a major political party or</li>
-    <li>
-      <i class="fa fa-times-circle fa-lg fa-fw red"></i>&nbsp;
-      aims to spread religion.</li>
-  </ul>
+  <p> If doesn't matter what your area or issue of primary focus is, but you must meet these criteria to use eConvenor.  
 
-  <a href="{% url 'index' %}" class="btn btn-default btn-home">
-    <i class="fa fa-home fa-lg fa-fw"></i>
-  </a>
   <div class="pull-right">
     <a href="{% url 'qualify' 'step1' %}" class="btn btn-default">
       <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
@@ -52,9 +31,30 @@
     </a>
     <a href="{% url 'qualify' 'step3' %}" class="btn btn-primary">
       <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
-      I understand
+      Yes
     </a>
+    <button type="button" class="btn btn-primary" id="exit_button">
+      <i class="fa fa-times-circle fa-lg fa-fw"></i>&nbsp;
+      No
+    </button>
   </div>
+
+  <div class="modal-data" id="exit_modal_title">
+    <i class="fa fa-times-circle fa-lg"></i>&nbsp;
+    You are not eligible for an eConvenor account
+  </div>
+  <div class="modal-data" id="exit_modal_body">
+    <p>Your group must have a progressive focus and be opposed to oppression for you to set up an eConvenor account.<p>
+  </div>
+  <div class="modal-data" id="exit_modal_button">
+    <i class="fa fa-arrow-circle-right fa-lg fa-fw"></i>&nbsp;
+    Exit eligibility check
+  </div>
+  <div class="modal-data" id="exit_modal_button_target">
+    {% url 'index' %}
+  </div>
+
+
        
 {% endblock content %}
 
