--- a/registration/templates/qualify_step5.html
+++ b/registration/templates/qualify_step5.html
@@ -4,31 +4,65 @@
 
 {% block heading %}
 
-  Should your group pay to use eConvenor?&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+  Unions and political parties&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
   Step 5 of 10
 
 {% endblock heading %}
 
 {% block content %}
 
-  <p class="lead">Is your group a political party or trade union in a high-income, reasonably democratic country?</p>
+  <p class="lead">Is your group a part of a major political party or trade union in a high-income, reasonably democratic country?</p>
+  
+  <p>If it is, you must pay a fee to use eConvenor. This will help us provide the service to less well-funded groups for free. Click the "Yes" button below.
 
-  <p>If you answered yes to the above, please contact us at fees@econvenor.org to arrange payment for using eConvenor. Do not continue with this questionnaire. We will negotiate a payment plan with you, and we'll set up your account.</p>
+
+  <p class="lead">A note for unions and political parties in lower-income and less democratic countries</p>
+
+  <p>We understand that you won't have access to as many resources as similar organisations in high-income and/or more democratic countries, so we'd love you to to use eConvenor for free. Click the "No" button below to continue.
 
   <div class="pull-right">
     <a href="{% url 'qualify' 'step4' %}" class="btn btn-default">
       <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
       Back
     </a>
-    <a href="{% url 'register' %}" class="btn btn-primary">
+    <button type="button" class="btn btn-primary" id="exit_button">
       <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
       Yes
-    </a>
-    <a href="{% url 'register' %}" class="btn btn-primary">
+    </button>
+    <a href="{% url 'qualify' 'step6' %}" class="btn btn-primary">
       <i class="fa fa-times-circle fa-lg fa-fw"></i>&nbsp;
       No
     </a>
   </div>
+  
+  <div class="modal-data" id="exit_modal_title">
+    <i class="fa fa-star fa-lg"></i>&nbsp;
+    Contact eConvenor
+  </div>
+  <div class="modal-data" id="exit_modal_body">
+    <p>As part of a union or major political party in a high-income, reasonably democratic country, you must pay a fee to use eConvenor.</p>
+    <p>Click the "Email eConvenor" button below, or email <a href="mailto:fees@econvenor.org?subject=Fee+enquiry">fees@econvenor.org</a> and include this information:</p>
+    <ul>
+      <li>
+        <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+        The country you operate in</li>
+      <li>
+        <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+        The number of participants in the group which will be using eConvenor</li>
+      <li>
+        <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+        The address of your website</li>
+    </ul>    
+    <p>Do not continue with this eligibility self-check. We will set up your account once your fee is paid.</p>
+  </div>
+  <div class="modal-data" id="exit_modal_button">
+    <i class="fa fa-envelope fa-lg fa-fw"></i>&nbsp;
+    Email eConvenor
+  </div>
+  <div class="modal-data" id="exit_modal_button_target">
+    mailto:fees@econvenor.org?subject=Fee+enquiry
+  </div>
+
        
 {% endblock content %}
 
